# SyntheticData

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENTS.md  ENHANCEMENT_PLAN.md  FEATURES.md  NOTICE  README.md  bd.md
.github/workflows/: ci.yml  docs.yml
benches/: common.rs  correctness.rs  distribution_sampling.rs  generation_throughput.rs  output_sinks.rs  scalability.rs
crates/datasynth-banking/: Cargo.toml  README.md
crates/datasynth-cli/: Cargo.toml  README.md
crates/datasynth-config/: Cargo.toml  README.md
crates/datasynth-config/src/: lib.rs  presets.rs  schema.rs  validation.rs
crates/datasynth-core/: Cargo.toml  README.md
crates/datasynth-eval/: Cargo.toml  README.md
crates/datasynth-fingerprint/: Cargo.toml  README.md
crates/datasynth-generators/: Cargo.toml  README.md
crates/synth-banking/: Cargo.toml
crates/synth-banking/src/: config.rs  lib.rs  orchestrator.rs
crates/synth-banking/src/generators/: account_generator.rs  counterparty_generator.rs  customer_generator.rs  kyc_generator.rs  transaction_generator.rs
crates/synth-banking/src/labels/: entity_labels.rs  mod.rs  narrative_generator.rs  relationship_labels.rs  transaction_labels.rs
crates/synth-banking/src/models/: account.rs  beneficial_owner.rs  case_narrative.rs  counterparty.rs  customer.rs  kyc_profile.rs  transaction.rs
crates/synth-banking/src/personas/: business.rs  mod.rs  retail.rs  trust.rs
crates/synth-banking/src/typologies/: fraud.rs  funnel.rs  injector.rs  layering.rs  mod.rs  mule.rs  round_tripping.rs  spoofing.rs  structuring.rs
crates/synth-cli/: Cargo.toml  README.md
crates/synth-cli/src/: main.rs
crates/synth-cli/tests/: cli_tests.rs  e2e_tests.rs
crates/synth-config/: Cargo.toml  README.md
crates/synth-config/src/: lib.rs  presets.rs  schema.rs  validation.rs
crates/synth-eval/: Cargo.toml  README.md
crates/synth-eval/examples/: evaluate_data.rs
crates/synth-eval/src/: config.rs  error.rs  lib.rs
crates/synth-eval/src/coherence/: balance.rs  document_chain.rs  intercompany.rs  mod.rs  subledger.rs
crates/synth-eval/src/ml/: features.rs  graph.rs  labels.rs  splits.rs
crates/synth-eval/src/quality/: completeness.rs  consistency.rs  format.rs  uniqueness.rs
crates/synth-eval/src/report/: comparison.rs  html.rs  thresholds.rs
crates/synth-eval/src/statistical/: amount_distribution.rs  benford.rs  line_item.rs  mod.rs  temporal.rs
crates/synth-eval/src/tuning/: mod.rs
crates/synth-generators/: Cargo.toml  README.md
crates/synth-generators/src/: coa_generator.rs  company_selector.rs  control_generator.rs  je_generator.rs  lib.rs  user_generator.rs
crates/synth-generators/src/anomaly/: document_flow_anomalies.rs  injector.rs  mod.rs  patterns.rs  strategies.rs  types.rs
crates/synth-generators/src/audit/: engagement_generator.rs  evidence_generator.rs  finding_generator.rs  judgment_generator.rs  mod.rs  risk_generator.rs  workpaper_generator.rs
crates/synth-generators/src/balance/: balance_tracker.rs  mod.rs  opening_balance_generator.rs  trial_balance_generator.rs
crates/synth-generators/src/data_quality/: duplicates.rs  format_variations.rs  injector.rs  missing_values.rs  mod.rs  typos.rs
crates/synth-generators/src/document_flow/: document_chain_manager.rs  document_flow_je_generator.rs  mod.rs  o2c_generator.rs  p2p_generator.rs  three_way_match.rs
crates/synth-generators/src/fx/: cta_generator.rs  currency_translator.rs  fx_rate_service.rs  mod.rs
crates/synth-generators/src/intercompany/: elimination_generator.rs  ic_generator.rs  matching_engine.rs  mod.rs
crates/synth-generators/src/master_data/: asset_generator.rs  customer_generator.rs  employee_generator.rs  entity_registry_manager.rs  material_generator.rs  mod.rs  vendor_generator.rs
crates/synth-generators/src/period_close/: accruals.rs  close_engine.rs  depreciation.rs  mod.rs  year_end.rs
crates/synth-generators/src/subledger/: ap_generator.rs  ar_generator.rs  document_flow_linker.rs  dunning_generator.rs  fa_generator.rs  inventory_generator.rs  mod.rs  reconciliation.rs
crates/synth-graph/: Cargo.toml  README.md
crates/synth-graph/src/: lib.rs
crates/synth-graph/src/builders/: approval_graph.rs  banking_graph.rs  entity_graph.rs  mod.rs  transaction_graph.rs
crates/synth-graph/src/exporters/: dgl.rs  mod.rs  neo4j.rs  pytorch_geometric.rs
crates/synth-graph/src/ml/: features.rs  mod.rs  splits.rs
crates/synth-graph/src/models/: edges.rs  graph.rs  mod.rs  nodes.rs
crates/synth-ocpm/: Cargo.toml  README.md
crates/synth-ocpm/src/: lib.rs
crates/synth-ocpm/src/export/: mod.rs  ocel2.rs
crates/synth-ocpm/src/generator/: event_generator.rs  mod.rs  o2c_generator.rs  p2p_generator.rs
crates/synth-ocpm/src/models/: activity_type.rs  event.rs  event_log.rs  object_type.rs  process_variant.rs
crates/synth-output/: Cargo.toml  README.md
crates/synth-output/src/: control_export.rs  csv_sink.rs  json_sink.rs  lib.rs  parquet_sink.rs
crates/synth-runtime/: Cargo.toml  README.md
crates/synth-runtime/src/: enhanced_orchestrator.rs  lib.rs  orchestrator.rs
crates/synth-runtime/tests/: full_pipeline_integration.rs  generation_integration.rs  semantic_tests.rs
crates/synth-server/: Cargo.toml  README.md  build.rs
crates/synth-server/proto/: synth.proto
crates/synth-server/src/: lib.rs  main.rs
crates/synth-server/src/grpc/: mod.rs  service.rs  synth.synth.rs
crates/synth-server/src/rest/: auth.rs  mod.rs  rate_limit.rs  routes.rs  websocket.rs
crates/synth-server/tests/: grpc_integration.rs  rest_integration.rs  websocket_integration.rs
docs/: book.toml  datasynth-executive-overview.tex
python/: MANIFEST.in  README.md  pyproject.toml
python/datasynth_py/: __init__.py  client.py  fingerprint.py
python/datasynth_py/config/: __init__.py  blueprints.py  models.py  validation.py
python/datasynth_py/runtime/: __init__.py
python/tests/: test_blueprints.py  test_config.py
scripts/: publish-python.sh  publish.sh
src/: lib.rs
templates/: ml-training-balanced.yaml
(+678 files in other folders)
