[package]
name = "synth-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Evaluation framework for synthetic financial data quality and coherence"

[dependencies]
# Internal crates
synth-core = { workspace = true }
synth-config = { workspace = true }
synth-generators = { workspace = true }
synth-graph = { workspace = true }

# Numeric
rust_decimal = { workspace = true }

# Statistics
statrs = "0.17"
ndarray = "0.16"

# Date/Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Report generation
askama = "0.12"

# Chart generation (optional feature)
plotters = { version = "0.3", optional = true }

# Parallel processing
rayon = { workspace = true }

[dev-dependencies]
synth-test-utils = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
rust_decimal_macros = "1.35"

[features]
default = ["charts"]
charts = ["plotters"]
