[package]
name = "synth-graph"
version = "0.1.0"
edition = "2021"
description = "Graph/network export for synthetic accounting data - supports PyTorch Geometric, Neo4j, and DGL formats"
license = "MIT"

[dependencies]
synth-core = { path = "../synth-core" }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
rust_decimal_macros = "1.33"
