[package]
name = "synth-output"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Output sinks for CSV, Parquet, JSON, and streaming formats"

[dependencies]
synth-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
csv = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
