[package]
name = "synth-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Runtime orchestration, parallel execution, and memory management"

[dependencies]
synth-core = { workspace = true }
synth-config = { workspace = true }
synth-generators = { workspace = true }
synth-ocpm = { workspace = true }
synth-output = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
crossbeam-channel = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
synth-test-utils = { workspace = true }
